<resources>
    <string name="app_name">splitCount</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login">Login</string>
    <string name="Signup">Sign up !</string>
    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password2">Confirm your password</string>
    <string name="register_title">Please fill the form below !</string>
    <string name="Signin">Login</string>
    <string name="login_title">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_test">testActivity</string>
    <string name="AddSplitcount">Create a new splitcount</string>
    <string name="SplitcountName">Splitcount name</string>
    <string name="CreateSplitcount">Create !</string>
    <string name="JoinSplitcount">Join a splitcount !</string>
    <string name="SplitcountCode">Enter splitcount\'s code</string>
    <string name="JoinSplitcountBtn">Join !</string>
    <string name="update_profile_title">Update your profile</string>
    <string name="keep_old_password">Keep old password</string>
    <string name="change_old_password">Change password</string>
    <string name="Update_btn">Update !</string>
    <string name="new_password">New password</string>
    <string name="oldPassword">Old password</string>
    <string name="SplitcountDescription">Description</string>
    <string name="EditAccount">Update your account</string>
    <string name="About">About ..</string>
    <string name="amount">amount</string>
    <string name="AddExpenditure">Add expenditure !</string>
    <string name="Add">Add !</string>
    <string name="title">title</string>
    <string name="Quit">Leave !</string>
</resources>
