<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateProfileActivity">

    <TextView
        android:text="@string/update_profile_title"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_update_profile_username_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_update_profile_username_input"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_update_profile_email_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_update_profile_email_input"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:id="@+id/radio_keep_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_old_password"/>
        <RadioButton
            android:id="@+id/radio_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_old_password"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_update_profile_confirm_password_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_update_profile_confirm_password_input"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/oldPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_update_profile_password_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/activity_update_profile_password_input"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/new_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_update_profile_password2_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/activity_update_profile_password2_input"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            android:hint="@string/password2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_update_profile_update_button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" />
    <Button
        android:id="@+id/activity_update_profile_update2_button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <ProgressBar
        android:id="@+id/activity_update_profile_pb_loader"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>

